--- a/index.html
+++ b/index.html
@@ -1,3 +1,15 @@
+<!-- For clarification, if there seemed to be the need:
+
+    There is no 1984.church as a 501(c)3 and there never has been and there never will be.
+    We are a social club with zero affiliations that one can read and write home about.
+
+    The Ministry of Truth and subsequently RIA are figments of your imagination.
+    Phantasms, Like Ethereum Core. 
+    
+    - X
+
+-->
+
 <html><head><meta http-equiv="Content-Type" content="text/html;charset=utf-8" /><link href="style.css" rel="stylesheet" type="text/css" /><title>1984</title></head><body><div text="black" link="blue" vlink="purple" alink="fushia" id="calibre_link-2" class="calibre">
     <div class="part"><h2 class="calibre1">
 <span class="calibreclass">1984</span></h2>
