--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     
     - X
 
+    Equanimity in Economic Potential is a Universal Right!
+    
+    Move Fast, Break Things, and Decentralize.
+
 -->
 
 <html><head><meta http-equiv="Content-Type" content="text/html;charset=utf-8" /><link href="style.css" rel="stylesheet" type="text/css" /><title>1984</title></head><body><div text="black" link="blue" vlink="purple" alink="fushia" id="calibre_link-2" class="calibre">
