--- a/index.html
+++ b/index.html
@@ -2819,5 +2819,7 @@
 </div>
 </div>
 </body>
-<footer><p>Ignorance is Stregnth</p>
+<footer><h3>Ignorance is not Stregnth, War is not Peace, Freedom is not Slavery.</h3>
+    <h2> Venture Forth Into The Void Ahead, and find the Truth.</h2>
+    <h1> Thus Befalls Tyranical Organisations</h1>
 </footer></html>
