--- a/index.html
+++ b/index.html
@@ -2820,6 +2820,6 @@
 </div>
 </body>
 <footer><h3>Ignorance is not Stregnth, War is not Peace, Freedom is not Slavery.</h3>
-    <h2> Venture Forth Into The Void Ahead, and find the Truth.</h2>
+    <h2> Venture Forth Into The Unknown, and find <b>Truth</b>.</h2>
     <h1> Thus Befalls Tyranical Organisations</h1>
 </footer></html>
