--- a/index.html
+++ b/index.html
@@ -2819,7 +2819,9 @@
 </div>
 </div>
 </body>
-<footer><h3>Ignorance is not Stregnth, War is not Peace, Freedom is not Slavery.</h3>
+<footer>
+    <h4>In <b>Truth</b>:</h4>
+    <h3>Ignorance is not Stregnth, War is not Peace, Freedom is not Slavery.</h3>
     <h2> Venture Forth Into The Unknown, and find <b>Truth</b>.</h2>
     <h1> Thus Befalls Tyranical Organisations</h1>
 </footer></html>
