--- a/index.html
+++ b/index.html
@@ -2824,4 +2824,5 @@
     <h3>Ignorance is not Stregnth, War is not Peace, Freedom is not Slavery.</h3>
     <h2> Venture Forth Into The Unknown, and find <b>Truth</b>.</h2>
     <h1> Thus Befalls Tyranical Organisations</h1>
+    <!-- Always strive for contributing to Net Positive Public Benefit via Route of Least Entropy. -->
 </footer></html>
