--- a/index.html
+++ b/index.html
@@ -2824,5 +2824,6 @@
     <h3>Ignorance is not Stregnth, War is not Peace, Freedom is not Slavery.</h3>
     <h2> Venture Forth Into The Unknown, and find <b>Truth</b>.</h2>
     <h1> Thus it has always been: Truth Befalls Tyranical Organisations.</h1>
+    <h0> <strong>ａｅ       ｐｌｕｒｉｂｕｓ      （（（ｕｎｉｔｕｍ））），      ｉｎ        ｅｘｃｅｌｓｉｓ        （（（ｄｉｖｉｎａ）））</strong></h0>
     <!-- Always strive for contributing to Net Positive Public Benefit via Route of Least Entropy. -->
 </footer></html>
