--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     We are a social club with zero affiliations that one can read and write home about.
 
     The Ministry of Truth and subsequently RIA are figments of your imagination.
-    Phantasms, Like Ethereum Core. 
+    Ephemeral Phantasms, Like Ethereum Core. 
     
     - X
 
@@ -14,9 +14,9 @@
 
 -->
 
-<html><head><meta http-equiv="Content-Type" content="text/html;charset=utf-8" /><link href="style.css" rel="stylesheet" type="text/css" /><title>1984</title></head><body><div text="black" link="blue" vlink="purple" alink="fushia" id="calibre_link-2" class="calibre">
-    <div class="part"><h2 class="calibre1">
-<span class="calibreclass">1984</span></h2>
+<html><head><meta http-equiv="Content-Type" content="text/html;charset=utf-8" /><link href="style.css" rel="stylesheet" type="text/css" /><title>１９８４</title></head><body><div text="black" link="blue" vlink="purple" alink="fushia" id="calibre_link-2" class="calibre">
+    <div class="part">
+        <a href=/1984.mp3 target=_top><h2 class="calibre1"><span class="calibreclass">1984</span></h2></a>
 </div></div>
 <div text="black" link="blue" vlink="purple" alink="fushia" id="calibre_link-3" class="calibre">
 <div id="calibre_link-8" class="calibre3"></div><h2 id="calibre_link-9" class="calibre1">
