--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     We are a social club with zero affiliations that one can read and write home about.
 
     The Ministry of Truth and subsequently RIA are figments of your imagination.
-    Ephemeral Phantasms, Like Ethereum Core. 
+    Ephemeral Phantasms, Like Ethereum Core. Don't roll the CyberDice, Fed. *Womp Womp*
     
-    - X
+    - XXy
 
     Equanimity in Economic Potential is a Universal Right!
     
