--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
     There is no 1984.church as a 501(c)3 and there never has been and there never will be.
     We are a social club with zero affiliations that one can read and write home about.
 
-    The Ministry of Truth and subsequently RIA are figments of your imagination.
-    Ephemeral Phantasms, Like Ethereum Core. Don't roll the CyberDice, Fed. *Womp Womp*
-    
-    - XXy
+    The Ministries and subsequently RIA are figments of your imagination.
+    Ephemeral Phantasms, Like Ethereum Core. Don't roll the CyberDice. *Womp Womp*
+    RT,RP,CB.
 
     Equanimity in Economic Potential is a Universal Right!
     
