--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     Equanimity in Economic Potential is a Universal Right!
     
-    Move Fast, Break Things, and Decentralize.
+    Move Fast, Analy(z|s)e Things, and Decentrali(z|s)e.
 
 -->
 
