--- a/index.html
+++ b/index.html
@@ -2812,7 +2812,7 @@
 <p class="calibreclass51" id="calibre_link-3557">
 <span class="calibreclass9" id="calibre_link-3558">[1] </span><span class="calibreclass9" id="calibre_link-3559">Newspeak was the official language of Oceania. For an account of its structure and etymology see Appendix. </span></p>
 <p class="calibreclass52" id="calibre_link-3560">
-<span class="calibreclass9" id="calibre_link-3561">[2] </span><span class="calibreclass9" id="calibre_link-3562">Compound words such as </span><span class="calibreclass28" id="calibre_link-3563">speakwrite</span><span class="calibreclass9" id="calibre_link-3564">, were of course to be found in the A vocabulary, but these were merely convenient abbreviations and had no special ideologcal colour. </span></p>
+<span class="calibreclass9" id="calibre_link-3561">[2] </span><span class="calibreclass9" id="calibre_link-3562">Compound words such as </span><span class="calibreclass28" id="calibre_link-3563">speakwrite</span><span class="calibreclass9" id="calibre_link-3564">, were of course to be found in the A vocabulary, but these were merely convenient abbreviations and had no special ideation. </span></p>
 <p class="calibreclass53" id="calibre_link-3565">
 </div>
 </div>
