--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     We are a social club with zero affiliations that one can read and write home about.
 
     The Ministries and subsequently RIA are figments of your imagination.
-    Ephemeral Phantasms, Like Ethereum Core. Don't roll the CyberDice. *Womp Womp*
+    Ephemeral Phantasms, Like **^Ethereum Core. Don't roll the CyberDice. *Womp Womp*
     RT,RP,CB.
 
     Equanimity in Economic Potential is a Universal Right!
@@ -2824,6 +2824,6 @@
     <h3>Ignorance is not Stregnth, War is not Peace, Freedom is not Slavery.</h3>
     <h2> Venture Forth Into The Unknown, and find <b>Truth</b>.</h2>
     <h1> Thus it has always been: Truth Befalls Tyranical Organisations.</h1>
-    <h0> <strong>ａｅ       ｐｌｕｒｉｂｕｓ      （（（ｕｎｉｔｕｍ）））</strong></h0><!--EIN:93-3987811-->␄<h0><strong>，      ｉｎ        ｅｘｃｅｌｓｉｓ        （（（ｄｉｖｉｎａ）））</strong></h0>
+    <h0> <strong>ａｅ       ｐｌｕｒｉｂｕｓ      （（（ｕｎｉｔｕｍ）））</strong></h0><!--EIN:93-3987811 (Explicant: See **^)-->␄<h0><strong>，      ｉｎ        ｅｘｃｅｌｓｉｓ        （（（ｄｉｖｉｎａ）））</strong></h0>
 </footer>
 </html␄>
