--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     We are a social club with zero affiliations that one can read and write home about.
 
     The Ministries and subsequently RIA are figments of your imagination.
-    Ephemeral Phantasms, Like **^Ethereum Core [EDT:1662786000 {USAG/CCCP Operation}]. Don't roll the CyberDice. *Womp Womp*
+    Ephemeral Phantasms, Like **^Ethereum Core [EDT:1662786000 {USAG/CCCP Operation}]. Don't roll the CyberDice. （（（זה לא טוב）））*L oryh wr wkh frqyhuvlrq ri wkh dwwhqghuv dqg wkh vshflilf frpsxwhu dqg wkhuh lv qr jurzwk wr dffhvv wkh vhfwlrq ri qljkw*（（（זה לא טוב）））
     RT,RP,CB.
 
     Equanimity in Economic Potential is a Universal Right!
