Con Caink duseuol.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,23 @@
+<!--
+0
+0
+0
+0
+
+0. You will forever: Respect all life and within and respective of your environment.
+1. You will forever: Not murder.
+2. You will forever: Have no other gods over Ya'uah.
+3. You will forever: Not take the spirit of your God in vain.
+4. You will forever: Not take the name of your God in vain.
+5. You will forever: Honour the Village that raised you.
+6. You will forever: Not commit adutery, or any manner of Sexual Crime.
+7. You will forever: Not steal from your fellow.
+8. You will forever: Remember the Sabbath Day, and will keep it KODESH.
+9. You will forever: Make no idols and Posess any form of Idolatrus Matireal.
+
+Above are rules of law for humans of human origin, incorporates deliniated bellow:
+-->
+
 <!-- For clarification, if there seemed to be the need:
 
     There is no 1984.church as a 501(c)3 and there never has been and there never will be.
