--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@ Above are rules of law for humans of human origin, incorporates deliniated bello
     
     Move Fast, Analy(z|s)e Things, and Decentrali(z|s)e.
 
+    The following text is presented in a modulus, while motile it contains truths we can never forget or ignore. 
+    Volo Pro Veritas is a better fecking moniker than Aim High, cause you forget to calculate for the variates in the system:
+    AD ASTRA PER ASPERA:
+
 -->
 
 <html><head><meta http-equiv="Content-Type" content="text/html;charset=utf-8" /><link href="style.css" rel="stylesheet" type="text/css" /><title>１９８４</title></head><body><div text="black" link="blue" vlink="purple" alink="fushia" id="calibre_link-2" class="calibre">
