--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ ATTENTION: 1984(.church)(.college)(.voyage) is an SAO (Societal Action Organisat
 
 0. You will forever: Respect all life and within and respective of your environment.
 1. You will forever: Not murder.
-2. You will forever: Have no other gods over Ya'uah.
+2. You will forever: Have no other gods over YIAHYIAZ. (Ya'uah) [Standard Cannonical  Nomenclature:יהוה]
 3. You will forever: Not take the spirit of your God in vain.
 4. You will forever: Not take the name of your God in vain.
 5. You will forever: Honour the Village that raised you.
@@ -25,21 +25,24 @@ Above are rules of law for humans of human origin, incorporate entity law delini
 
 -->
 
-<!-- For clarification, if there seemed to be the need:
+<!--
 
-    There is no 1984.church as a 501(c)3 and there never has been and there never will be.
-    We are a social club with zero affiliations that one can read and write home about.
+ For clarification, if there seemed to be the need:
 
-    The Ministries and subsequently RSIA are figments of your imagination.
-    Ephemeral Phantasms, Like **^Ethereum Core [EDT:1662786000 {USAG/CCCP Operation}]. Don't roll the CyberDice. （（（זה לא טוב）））*L oryh wr wkh frqyhuvlrq ri wkh dwwhqghuv dqg wkh vshflilf frpsxwhu dqg wkhuh lv qr jurzwk wr dffhvv wkh vhfwlrq ri qljkw*（（（זה לא טוב）））
+There is no 1984.church as a 501(c)3 and there never has been and there never will be.
+We are a social club with zero affiliations that one can read and write home about.
 
-    Equanimity in Economic Potential is a Universal Right!
+The Ministries and subsequently RSIA are figments of your imagination.
+Ephemeral Phantasms, Like **^Ethereum Core [EDT:1662786000 {USAG/CCCP Operation}]. Don't roll the CyberDice. （（（זה לא טוב）））
+
+Equanimity in Economic Potential is a Universal Right!
     
-    Move Fast, Analy(z|s)e Things, and Decentrali(z|s)e.
+Move Fast, Analy(z|s)e Things, and Decentrali(z|s)e.
 
-    The following text is presented in a modulim, while motile it contains truths we can never forget or ignore. 
-    Volo Pro Veritas is a better fecking moniker than Aim High, cause you forget to calculate for the variates in the system:
-    AD ASTRA PER ASPERA:
+The following text is presented in a modulim, while motile it contains truths we can never forget or ignore. 
+Volo Pro Veritas is a better fecking moniker than Aim High, because you forget to calculate for the variates in the system.
+    
+AD ASTRA PER ASPERA!
 
 -->
 
