--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ ATTENTION: 1984(.church)(.college)(.voyage) is an SAO (Societal Action Organisat
 
 0. You will forever: Respect all life and within and respective of your environment.
 1. You will forever: Not murder.
-2. You will forever: Have no other gods over YIAHYIAZ. (Ya'uah) [Standard Cannonical  Nomenclature:יהוה]
+2. You will forever: Have no other gods over YIAHYIAZ. (Ya'uah) [Standard Canonical Nomenclature: יהוה]
 3. You will forever: Not take the spirit of your God in vain.
 4. You will forever: Not take the name of your God in vain.
 5. You will forever: Honour the Village that raised you.
