--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@ Equanimity in Economic Potential is a Universal Right!
     
 Move Fast, Analy(z|s)e Things, and Decentrali(z|s)e.
 
-The following text is presented in a modulim, while motile it contains truths we can never forget or ignore. 
-Volo Pro Veritas is a better fecking moniker than Aim High, because you forget to calculate for the variates in the system.
+The following text is presented in a shifting modulous, while motile it contains truths we can never forget or ignore.
+Volo Pro Veritas is a better motto than Aim High, because you forget to calculate for the variates in the system.
     
 AD ASTRA PER ASPERA!
 
