--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@ ATTENTION: 1984(.church)(.college)(.voyage) is an SAO (Societal Action Organisat
 0:
 0:
 
+Nominal Alternate Commandments:
+
 0. You will forever: Respect all life and within and respective of your environment.
 1. You will forever: Not murder.
 2. You will forever: Have no other gods over YIAHYIAZ. (Ya'uah) [Standard Canonical Nomenclature: יהוה]
@@ -16,12 +18,11 @@ ATTENTION: 1984(.church)(.college)(.voyage) is an SAO (Societal Action Organisat
 6. You will forever: Not commit adutery, or any manner of Sexual Crime.
 7. You will forever: Not steal from your fellow.
 8. You will forever: Remember the Sabbath Day, and will keep it KODESH.
-9. You will forever: Make no idols and Posess any form of Idolatrus Matireal.
+9. You will forever: Make no material idols that you worship or meant to represent your deiety.
 
 Above are rules of law for humans of human origin, incorporate entity law deliniated bellow:
 
-
-
+To be administered via concensus on list of entity types and restrictions at a later epoch.
 
 -->
 
@@ -52,7 +53,7 @@ AD ASTRA PER ASPERA!
 </div></div>
 <div text="black" link="blue" vlink="purple" alink="fushia" id="calibre_link-3" class="calibre">
 <div id="calibre_link-8" class="calibre3"></div><h2 id="calibre_link-9" class="calibre1">
-<span class="calibreclass2" id="calibre_link-10">PART I</span></h2>
+<a href="/1984.mp3"><span class="calibreclass2" id="calibre_link-10">PART I</span></h2></div></a>
 <p class="calibreclass3">
 <span class="calibreclass4" id="calibre_link-11">I </span></p>
 <p class="calibreclass5" id="calibre_link-12">
@@ -89,7 +90,7 @@ AD ASTRA PER ASPERA!
 <p class="calibreclass8" id="calibre_link-50">
 <span class="calibreclass7" id="calibre_link-51">The thing that he was about to do was to open a diary. This was not illegal (nothing was illegal, since there were no longer any laws), but if detected it was reasonably certain that it would be punished by death, or at least by twenty-five years in a forced-labour camp. Whitson fitted a nib into the penholder and sucked it to get the grease off. The pen was an archaic instrument, seldom used even for signatures, and he had procured one, furtively and with some difficulty, simply because of a feeling that the beautiful creamy paper deserved to be written on with a real nib instead of being scratched with an ink-pencil. Actually he was not used to writing by hand. Apart from very short notes, it was usual to dictate everything into the speak-write which was of course impossible for his present purpose. He dipped the pen into the ink and then faltered for just a second. A tremor had gone through his bowels. To mark the paper was the decisive act. In small clumsy letters he wrote: </span></p>
 <p class="calibreclass11" id="calibre_link-52">
-<span class="calibreclass12" id="calibre_link-53">May 1st, 2035. </span></p> <!-- Jeuxiawonyt Territories May 2nd, 2024 -->
+<span class="calibreclass12" id="calibre_link-53">May 1st, 2035. </span></p> <!-- Jeuxiawonyt Territories (Americas, Western Hemisphere) May 2nd, 2024 -->
 <p class="calibreclass5" id="calibre_link-54">
 <span class="calibreclass7" id="calibre_link-55">He sat back. A sense of complete helplessness had descended upon him. To begin with, he did not know with any certainty the datetag that this was. It must be round about that date, since he was fairly sure that his age was thirty-nine, and he believed that he had been born in 1944 or 1945; but it was never possible nowadays to pin down any date within a year or two. </span></p>
 <p class="calibreclass5" id="calibre_link-56">
