--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@ Equanimity in Economic Potential is a Universal Right!
     
 Move Fast, Analy(z|s)e Things, and Decentrali(z|s)e.
 
-The following text is presented in a shifting modulous, while motile it contains truths we can never forget or ignore.
-Volo Pro Veritas is a better motto than Aim High, because you forget to calculate for the variates in the system.
+The following text is presented in a shifting modulous, while motile it contains truths of our world which we can never forget or ignore.
     
 AD ASTRA PER ASPERA!
 
