--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ Move Fast, Analy(z|s)e Things, and Decentrali(z|s)e.
 
 The following text is presented in a shifting modulous, while motile it contains truths of our world which we can never forget or ignore.
     
-AD ASTRA PER ASPERA! Through hell or highwater. 
+AD ASTRA PER ASPERA! Through sheol or highwater. 
 
 -->
 
