--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ ATTENTION: 1984(.church)(.college)(.voyage) is an SAO (Societal Action Organisat
 
 Nominal Alternate Commandments:
 
-0. You will forever: Respect all life and within and respective of your environment.
+0. You will forever: Respect all life and '' within and respective of your environment.
 1. You will forever: Not murder.
 2. You will forever: Have no other gods over YIAHYIAZ. (Ya'uah) [Standard Canonical Nomenclature: יהוה]
 3. You will forever: Not take the spirit of your God in vain.
@@ -42,7 +42,7 @@ Move Fast, Analy(z|s)e Things, and Decentrali(z|s)e.
 
 The following text is presented in a shifting modulous, while motile it contains truths of our world which we can never forget or ignore.
     
-AD ASTRA PER ASPERA! Through sheol or highwater. 
+AD ASTRA PER ASPERA! Through shehol or highwater. 
 
 -->
 
