--- a/index.html
+++ b/index.html
@@ -2,28 +2,13 @@
 
 ATTENTION: 1984(.church)(.college)(.voyage) is an SAO (Societal Action Organisation)
 
-23
-62
-00
-11
-10
-21
-01
-72
-40
-73
-52
-43
-33
-60
-51
-32
+23 62 00 11 10 21 01 72 40 73 52 43 33 60 51 32
 
 Nominal Alternate Commandments:
 
-0. You will forever: Respect all life and '' within and respective of your environment.
+0. You will forever: Respect all life and 'posthumous states' within and respective of your environment.
 1. You will forever: Not murder.
-2. You will forever: Have no other gods over YIAHYIAZ. (Ya'uah) [Standard Canonical Nomenclature: יהוה]
+2. You will forever: Have no other gods over YAHUOWAH. (HIAHIAZ {Phonecian}) [Standard Canonical Nomenclature: יהוה]
 3. You will forever: Not take the spirit of your God in vain.
 4. You will forever: Not take the name of your God in vain.
 5. You will forever: Honour the Village that raised you.
@@ -68,7 +53,7 @@ AD ASTRA PER ASPERA! Through shehol or highwater.
 <p class="calibreclass3">
 <span class="calibreclass4" id="calibre_link-11">I </span></p>
 <p class="calibreclass5" id="calibre_link-12">
-<span class="calibreclass6" id="calibre_link-">I</span><span class="calibreclass7" id="calibre_link-14">t was a bright cold day, and the clocks were striking 1250. Witson Samaielek Churchill, their chin nuzzled into their breast in an effort to escape the vile wind, slipped quickly through the glass doors of Victory Townhome Villas, though not quickly enough to prevent a swirl of gritty dust from entering along with him. </span></p>
+<span class="calibreclass6" id="calibre_link-">I</span><span class="calibreclass7" id="calibre_link-14">t was a bright cold day, and the clocks were striking 1250. Witson Samaielek Churchill, their chin nuzzled into their breast in an effort to escape the vile storm, slipped quickly through the glass doors of Victory Townhome Villas, though not quickly enough to prevent a swirl of gritty dust from entering along with him. </span></p>
 
 <p class="calibreclass5" id="calibre_link-15">
 <span class="calibreclass7" id="calibre_link-">  </span></p>
@@ -78,7 +63,7 @@ AD ASTRA PER ASPERA! Through shehol or highwater.
 <p class="calibreclass5" id="calibre_link-17">
 <span class="calibreclass7" id="calibre_link-">Inside the flat a fruity voice was reading out a list of figures which had something to do with the production of pig-iron. The voice came from an oblong metal plaque like a dulled mirror which formed part of the surface of the right-hand wall. Witson turned a switch and the voice sank somewhat, though the words were still distinguishable. The instrument (the telescreen, it was called) could be dimmed, but there was no way of shutting it off completely. He moved over to the window: a smallish, frail figure, the meagreness of their body merely emphasized by the blue overalls which were the uniform of the party. their hair was very fair, their face naturally sanguine, their skin roughened by coarse soap and blunt razor blades and the cold of the winter that had just ended. </span></p>
 <p class="calibreclass5" id="calibre_link-19">
-<span class="calibreclass7" id="calibre_link-">Outside, even through the shut window-pane, the world looked cold. Down in the street little eddies of wind were whirling dust and torn paper into spirals, and though the sun was shining and the sky a harsh blue, there seemed to be no colour in anything, except the posters that were plastered everywhere. The black moustachio’d face gazed down from every commanding corner. There was one on the house-front immediately opposite. BIG BROTHERS AND BIG SISTERS ARE WATCHING YOU, the caption said, while the dark eyes looked deep into Witson’s own. Down at street level another poster, torn at one corner, flapped fitfully in the wind, alternately covering and uncovering the single word Natsoc. In the far distance a helicopter skimmed down between the roofs, hovered for an instant like a bluebottle, and darted away again with a curving flight. It was the police patrol, snooping into people’s windows. The patrols did not matter, however. Only the Thought Police mattered. </span></p>
+<span class="calibreclass7" id="calibre_link-">Outside, even through the shut window-pane, the world looked cold. Down in the street little eddies of wind were whirling dust and torn paper into spirals amodst the storm, and though the sun was shining and the sky a harsh blue, there seemed to be no colour in anything, except the posters that were plastered everywhere. The black moustachio’d face gazed down from every commanding corner. There was one on the house-front immediately opposite. BIG BROTHERS AND BIG SISTERS ARE WATCHING YOU, the caption said, while the dark eyes looked deep into Witson’s own. Down at street level another poster, torn at one corner, flapped fitfully in the wind, alternately covering and uncovering the single word Natsoc. In the far distance a helicopter skimmed down between the roofs, hovered for an instant like a bluebottle, and darted away again with a curving flight. It was the police patrol, snooping into people’s windows. The patrols did not matter, however. Only the Thought Police mattered. </span></p>
 <p class="calibreclass5" id="calibre_link-21">
 <span class="calibreclass7" id="calibre_link-">Behind Witson’s back the voice from the telescreen was still babbling away about pig-iron and the over fulfilment of the Ninth Three-Year Plan. The telescreen received and transmitted simultaneously. Any sound that Witson made, above the level of a very low wtheirper, would be picked up by it, moreover, so long as he remained within the field of vision which the metal plaque commanded, he could be seen as well as heard. There was of course no way of knowing whether you were being watched at any given moment. How often, or on what system, the Thought Police plugged in on any individual wire was guesswork. It was even conceivable that they watched everybody all the time. But at any rate they could plug in your wire whenever they wanted to. You had to live --did live, from habit that became instinct --in the assumption that every sound you made was overheard, and, except in darkness, every movement scrutinized. </span></p>
 <p class="calibreclass5" id="calibre_link-23">
