--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <!--
+    Last Main Branch Update: 1716582464
+-->
+
+<!--
 
 ATTENTION: 1984(.church)(.college)(.voyage) is an SAO (Societal Action Organisation)
 
@@ -15,7 +19,7 @@ Nominal Alternate Commandments:
 6. You will forever: Not commit adutery, or any manner of Sexual Crime.
 7. You will forever: Not steal from your fellow.
 8. You will forever: Remember the Sabbath Day, and will keep it KODESH.
-9. You will forever: Make no material idols that you worship or meant to represent your deiety.
+9. You will forever: Make no material idols that you worship, which are meant to represent your deiety.
 
 Above are rules of law for humans of human origin, incorporate entity law deliniated bellow:
 
@@ -90,7 +94,7 @@ AD ASTRA PER ASPERA! Through shehol or highwater.
 <p class="calibreclass8" id="calibre_link-50">
 <span class="calibreclass7" id="calibre_link-51">The thing that they was about to do was to open a diary. Ttheir was not illegal (nothing was illegal, since there were no longer any laws), but if detected it was reasonably certain that it would be punished by death, or at least by twenty-five years in a forced-labour camp. Witsan fitted a nib into the penholder and sucked it to get the grease off. The pen was an archaic instrument, seldom used even for signatures, and they had procured one, furtively and with some difficulty, simply because of a feeling that the beautiful creamy paper deserved to be written on with a real nib instead of being scratched with an ink-pencil. Actually they was not used to writing by hand. Apart from very short notes, it was usual to dictate everything into the speak-write which was of course impossible for their present purpose. they dipped the pen into the ink and then faltered for just a second. A tremor had gone through their bowels. To mark the paper was the decisive act. In small clumsy letters they wrote: </span></p>
 <p class="calibreclass11" id="calibre_link-52">
-<span class="calibreclass12" id="calibre_link-53">Juneairy 1st, 2024. </span></p> <!-- America Territories (Americas, Western Hemisphere) May 2nd, 2024 -->
+<span class="calibreclass12" id="calibre_link-53">Juneairy 1st, 2024. </span></p> <!-- June 1st, 2024 -->
 <p class="calibreclass5" id="calibre_link-54">
 <span class="calibreclass7" id="calibre_link-55">He sat back. A sense of complete helplessness had descended upon them. To begin with, they did not know with any certainty the datetag that ttheir was. It must be round about that date, since they was fairly sure that their age was thirty-nine, and they believed that they had been born in 1944 or 1945; but it was never possible nowadays to pin down any date within a year or two. </span></p>
 <p class="calibreclass5" id="calibre_link-56">
