--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@ There is no 1984.church as a 501(c)3 and there never has been and there never wi
 We are a social club with zero affiliations that one can read and write home about.
 
 The Ministries and subsequently RSIA are figments of your imagination.
-Ephemeral Phantasms, Like **^Ethereum Core [EDT:1662786000 {USAG/CCCP Operation}]. Don't roll the CyberDice. （（（זה לא טוב）））
+Ephemeral Phantasms, Like **Printing serial numbers on new USD Bills that where transacted withbefore technology was available to scan them into the system. Don't roll the CyberDice... Oilstein.** （（（זה לא טוב）））
 
 Equanimity in Economic Potential is a Universal Right!
     
-Move Fast, Analy(z|s)e Things, and Decentrali(z|s)e.
+Work quip and quiperly, yet steadily, Analy(z|s)e Things, and Decentrali(z|s)e.
 
 The following text is presented in a shifting modulous, while motile it contains truths of our world which we can never forget or ignore.
     
