--- a/index.html
+++ b/index.html
@@ -1,14 +1,35 @@
 <!--
-    Last Main Branch Update: 1716582464
+    ABCDIFGHEJKLMNUPQRSTOVWXYZ
+    abcdifghejklmnupqrstovwxyz
+
+    ((solfeggio: (Da) (Ri) (Me) (Fu) (So) (Lw) (Ty))tutto.)
+
+    No Accents or identical consonants in succession for modern english.
+    Last QSD: Systems Main Branch Update = 1716668000
 -->
 
 <!--
 
-ATTENTION: 1984(.church)(.college)(.voyage) is an SAO (Societal Action Organisation)
+ATTENTION: 1984(.church)(.college)(.voyage) is an RSIA directed club 
+
+    {We are also the:
+    
+        Temple, Monarchy Hall, Cathedral, Chapel, and Synagouge.
+         (Missing ␄ Characters, will update later.)
+    
+    }
+
+-->
+
+<!--
 
 23 62 00 11 10 21 01 72 40 73 52 43 33 60 51 32
 
-Nominal Alternate Commandments:
+-->
+
+<!--
+
+Nominal 'Within Proper, Just, and Fair Truth (Sacra Veri)' Commandments:
 
 0. You will forever: Respect all life and 'posthumous states' within and respective of your environment.
 1. You will forever: Not murder.
@@ -47,8 +68,17 @@ AD ASTRA PER ASPERA! Through shehol or highwater.
 
 -->
 
-<html><head><meta http-equiv="Content-Type" content="text/html;charset=utf-8" /><link href="style.css" rel="stylesheet" type="text/css" /><title>１９８４</title></head><body><div text="black" link="blue" vlink="purple" alink="fushia" id="calibre_link-2" class="calibre">
-    <div class="part">
+<html>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html;charset=utf-8" /><link href="style.css" rel="stylesheet" type="text/css" /><title>１９８４</title>
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+        <link rel="manifest" href="/site.webmanifest">
+    </head>
+    <body>
+        <div text="black" link="blue" vlink="purple" alink="fushia" id="calibre_link-2" class="calibre">
+        <div class="part">
         <a href=/sd/graphics/heed.webm target=_top><h2 class="calibre1"><span class="calibreclass">MC M L X X X IV</span></h2></a>
 </div></div>
 <div text="black" link="blue" vlink="purple" alink="fushia" id="calibre_link-3" class="calibre">
