--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ AD ASTRA PER ASPERA! THROUGH EVERY NAUTILUS!
         <div class="part"><a href=/sd/graphics/heed.webm target=_top><h2 class="calibre1"><span class="calibreclass">MC M L X X X IV</span></h2></a></div></div>
         <div text="black" link="blue" vlink="purple" alink="fushia" id="calibre_link-3" class="calibre">
         <div id="calibre_link-8" class="calibre3"></div><h2 id="calibre_link-9" class="calibre1">
-        <a href="/sd/sound/faith.mp3"><span class="calibreclass2" id="calibre_link-10">PART I</span></h2></div></a>
+        <a href="/sd/sound/faith.mp3"><span class="calibreclass2" id="calibre_link-10">PART I</span></div>
 
         <p class="calibreclass3"><span class="calibreclass4" id="calibre_link-11">I </span></p>
         <p class="calibreclass5" id="calibre_link-12"><span class="calibreclass6" id="calibre_link-">T</span><span class="calibreclass7" id="calibre_link-14">hose that saw them... hushed. Those that whom engaged them... *Witsan woke up* </span></p>
