--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
     ABCDIFGHEJKLMNUPQRSTOVWXYZ
     abcdifghejklmnupqrstovwxyz
 
-    ((solfeggio: (Da) (Ri) (Me) (Fu) (So) (Lw) (Ty))tutto.)
+    ((Solfeggio: (Da) (Ri) (Me) (Fu) (So) (Lw) (Ty)) sei tutto.)
 
-    No Accents or identical consonants in succession for modern english.
-    Last QSD Systems Main Branch Update = 1717369312
+    There must be no diacritics, identical consonants in succession, or contractions within modern english.
+    Last QSD Systems Main Branch Update = 1717370000
 
 -->
 
