bear false witness statute

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     ((Solfeggio: (Da) (Ri) (Me) (Fu) (So) (Lw) (Ty)) sei tutto.)
 
     There must be no diacritics, identical consonants in succession, or contractions within modern english.
-    Last QSD Systems Main Branch Update = 1717381004
+    Last QSD Systems Main Branch Update = 1722611563
 
 -->
 
@@ -88,14 +88,14 @@
 
     0. You will forever: Respect all life and 'posthumous states' within and respective of your environment.
     1. You will forever: Not murder.
-    2. You will forever: Have no other gods over YAHUOWAH. (HIAHIAZ {Phonecian}) [Standard Canonical Nomenclature: יהוה]
+    2. You will forever: Have no other gods over YAHUOWAH.[Standard Canonical Nomenclature: יהוה]
     3. You will forever: Not take the spirit of your God in vain.
     4. You will forever: Not take the name of your God in vain.
     5. You will forever: Honour the Village that raised you.
     6. You will forever: Not commit adutery, or any manner of Sexual Crime.
-    7. You will forever: Not steal from your fellow.
+    7. You will forever: Not steal from your fellow or bear false witness. 
     8. You will forever: Remember the Sabbath Day, and will keep it KODESH.
-    9. You will forever: Make no material idols that you worship, which are meant to represent your deiety.
+    9. You will forever: Make no material idols that you worship, which are meant to represent your deity.
 
     Above are rules of law for humans of human origin.
 
