--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     We where under attack for a period of standard human metric time and are recovering, the following content is not perfect but is true and within that it is a truth in time.
     We are improving these systems constantly, please be patient as we work on the systemic issues caused by errant dynamics that where not directed by any true member of RSIA.
 
-    General Dynamics has some explanaining to do pertaining to their errant maths and we have work to do. Thank you for your continiued membership and support of this proper and just cause.
+    State Functionaries have truthfully true explanaining to do pertaining to their errant maths and we have work to do. Thank you for your continiued membership and support of this proper and just cause.
 
 -->
 
