--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     ((Solfeggio: (Da) (Ri) (Me) (Fu) (So) (Lw) (Ty)) sei tutto.)
 
     There must be no diacritics, identical consonants in succession, or contractions within modern english.
-    Last QSD Systems Main Branch Update = 1722888232
+    Last QSD Systems Main Branch Update = 1722899516
 
 -->
 
@@ -153,7 +153,7 @@
         <div id="calibre_link-8" class="calibre3"></div><h2 id="calibre_link-9" class="calibre1">
         <a href="/sd/sound/faith.mp3"><span class="calibreclass2" id="calibre_link-10">PART I</span></div></a>
 
-        <p class="calibreclass3"><span class="calibreclass4" id="calibre_link-11"><a href=/sd/graphics/lol.webm target="_body"></h2>I</span></p>
+        <p class="calibreclass3"><span class="calibreclass4" id="calibre_link-11"><a href=/sd/graphics/lol.webm target="_body"></h2>I</a></span></p>
         <p class="calibreclass5" id="calibre_link-12"><span class="calibreclass6" id="calibre_link-">T</span><span class="calibreclass7" id="calibre_link-14">hose that saw them... hushed. Those whom engaged them... *Witsan woke up* </span></p>
         <p class="calibreclass5" id="calibre_link-15"><span class="calibreclass7" id="calibre_link-">"BUPKES" they said softly as they inhaled deeply and then let out a sigh of releif and sat upright in their full size bed. *They looked around for a clock on the wall but it was too dark to find.* "It must be like one o'clock in the morning" they said and adjusted their glasses before looking for a flashlight. "the building lights did not come on until eight o'clock allowing natural light to fill the villa from within VICTORY Townhouses. *Witsan heard scurrying across the adjacent hallway.* "Enable Self Determinate Ambient Control" Witsan said to the telescreen's microphone, the telescreens where placed on the top right-hand corners of their flat, right above the doorway out of their bedroom. The vents on the wall left-hand side of them let out a strong gust of air that had the unique smell of moist almonds, boiled bagel dough, and un touchont du sulphur. "LIBERTY THROUGH VICTORY" was engraved on the telescreen along with the symbol of peace and the words "Big Brothers, Big Sisters"</span></p>
         <p class="calibreclass5" id="calibre_link-15"><span class="calibreclass7" id="calibre_link-">Victory Townhouse Villas where the standard living conditions for members of the ministries and the agencies within those ministry buildings, these living spaces where relatively modest compared to those in the disfortune of being in the proles. The villas where placed as close to the center of downtown as possible to make it easier for its members to get to their respective ministry buildings. Each of the ministries serves a different purpose and they where all interconnected by under ground sub-terrainian metropolitan transport networks (SUBMETRO in Neolex.) that contained tram systems which transport entities over large distances between the buildings in our Megacity.</span></p>
