what is occuring now is but the passing of greed

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
     <head>
 
-        <meta http-equiv="Content-Type" content="text/html;charset=utf-8" /><link href="style.css" rel="stylesheet" type="text/css" /><title>1⋅9⋅8⋅4</title>
+        <meta http-equiv="Content-Type" content="text/html;charset=utf-8" /><link href="style.css" rel="stylesheet" type="text/css" /><title>1984</title>
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -177,10 +177,10 @@
 <p class="calibreclass8" id="calibre_link-26">
 <span class="calibreclass7" id="calibre_link-">The Ministry of Truth also known as MINTRU, in Neolex was startlingly different from any other object in sight. It was an enormous pyramidal structure of glittering white concrete, soaring up, terrace after terrace, the tip of which was above the cloudline. From where Witsan stood it was just possible to read, picked out on its white face in elegant lettering, the three slogans of the Labour Party: </span></p>
 <p class="calibreclass10" id="calibre_link-30">
-<span class="calibreclass7" id="calibre_link-31">WAR IS PEAC</span><span class="calibreclass7" id="calibre_link-32">E! 
+    <a href="/sd/graphics/3.webm"><span class="calibreclass7" id="calibre_link-31">WAR IS PEAC</span><span class="calibreclass7" id="calibre_link-32">E! 
 </span><span class="calibreclass7" id="calibre_link-33">FREEDOM IS SLAVER</span><span class="calibreclass7" id="calibre_link-34">Y! 
 </span><span class="calibreclass7" id="calibre_link-35">IGNORANCE IS STRENGT</span><span class="calibreclass7" id="calibre_link-36">H! 
-</span></p>
+</span></a></p>
 <p class="calibreclass5" id="calibre_link-37">
 <span class="calibreclass7" id="calibre_link-38">Scattered about New Haven there were just seven other buildings of similar appearance and size. So completely did they dwarf the surrounding architecture that from the roof of Victory Minsaons you could see all four of them simultaneously. They were the homes of the four Ministries between which the entire apparatus of government was divided. The Ministry of Truth, which concerned itself with news, entertainment, education, and the fine arts. The Ministry of Peace, which concerned itself with war. The Ministry of Love, which maintained law and order. And the Ministry of Plenty, which was responsible for economic affairs. Their names, in Neolex: Mintru, Minpax, Minluv, and Minall.</span></p>
 <p class="calibreclass5" id="calibre_link-39">
