--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     ((Solfeggio: (Da) (Ri) (Me) (Fu) (So) (Lw) (Ty)) haec omnia.)
 
     There must be no diacritics, identical consonants in succession, or contractions within modern english.
-    Last QSD Systems Main Branch Update = 1723069657
+    Last QSD Main Branch Update = 1724462000
 
 -->
 
