--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     <body>
 
         <div text="black" link="blue" vlink="purple" alink="fushia" id="calibre_link-2" class="calibre">
-        <div class="part"><a href=/sd/graphics/heed.webm target=_top><h2> <span class="calibreclass2">MC M L X X X IV</span></h2></a></div></div>
+        <div class="part"><a href=/sd/graphics/heed.webm target="_top"><h2 class="calibre1"><span class="calibreclass">MC M L X X X IV</span></h2></a></div></div>
         <div text="black" link="green" vlink="yellow" alink="fushia" id="calibre_link-3" class="calibre">
         <div id="calibre_link-8" class="calibre3"></div><h2 id="calibre_link-9" class="calibre1">
         <a href="/sd/sound/faith.mp3"><span class="calibreclass2" id="calibre_link-10">PART I</span></div></a>
