--- a/index.html
+++ b/index.html
@@ -1,13 +1,5 @@
 <!--
 
-    NOTICE:
-
-
-
--->
-
-<!--
-
     README:
 
     How many more lives will be lost?
@@ -21,6 +13,7 @@
 <!--
 
     INFORMATION:
+
     Last QSD Main Branch Update = 1724462000
 
 -->
@@ -53,8 +46,8 @@
 
     For clarification, if there seemed to be the need:
 
-    There is no 1984.church as a 501(c)3 and there never has been and there never will be.
-    The Ministries and subsequently RSIA are figments of your imagination, right?
+    There is no 1984 Church as a 501(c)3, there never has been, and there never will be.
+    The Ministries and subsequently RSIA are figments of your imagination, right? Just some southern hospitality. 
 
     Equanimity in Socioeconomic Potential is a Universal Right Irrespective of Species, Race, or Creed!
 
@@ -76,7 +69,14 @@
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
         <link rel="manifest" href="/site.webmanifest">
-        
+
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-V6ZNGRH08Y"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'G-V6ZNGRH08Y');
+        </script>
     </head>
 
     <body>
