--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 <html>
 <head>
 <title>Operation Complete</title>
+<meta http-equiv="refresh" content="12; url=https://1984.voyage/"/>
 <style>
   body, html {
     margin: 0;
