--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <html>
 <head>
 <title>Operation Complete</title>
-<meta http-equiv="refresh" content="12; url=https://1984.voyage/"/>
+<meta http-equiv="refresh" content="1; url=https://1984.church/0.webm"/>
 <style>
   body, html {
     margin: 0;
